--- a/public/src/app/login.component.html
+++ b/public/src/app/login.component.html
@@ -1,5 +1,41 @@
-<h1>
-  {{title}}
-</h1>
-
-efaef
+<div class="container">
+  <div class="row hang-down">
+    <div class="col s1 m3"></div>
+    <div class="col s10 m6">
+      <div class="card">
+        <div class="card-content">
+          <h4>WebSweeper</h4>
+        </div>
+        <div class="card-tabs">
+          <ul class="tabs tabs-fixed-width">
+            <li class="tab"><a class="active" href="#sign-in-tab">Sign in</a></li>
+            <li class="tab"><a class="active" href="#sign-up-tab">Sign up</a></li>
+          </ul>
+        </div>
+        <div class="card-content grey lighten-4">
+          <div id="sign-in-tab">Coming soon</div>
+          <div id="sign-up-tab">
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="username" type="text" class="validate">
+                <label for="username">Username</label>
+              </div>
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate">
+                <label for="email">Email</label>
+              </div>
+              <div class="input-field col s12">
+                <input id="password" type="password" class="validate">
+                <label for="password">Password</label>
+              </div>
+            </div>
+            <div class="row center">
+              <a class="waves-effect waves-light btn">Sign in</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col s1 m3"></div>
+  </div>
+</div>
