--- a/public/src/app/login.component.html
+++ b/public/src/app/login.component.html
@@ -1,7 +1,8 @@
+<div class="background"><div class="background-glyph"></div></div>
 <div class="container">
   <div class="row hang-down">
-    <div class="col s1 m3"></div>
-    <div class="col s10 m6">
+    <div class="col s1 m2"></div>
+    <div class="col s10 m8">
       <div class="card">
         <div class="card-content">
           <h4>WebSweeper</h4>
@@ -12,7 +13,7 @@
             <li class="tab"><a class="active" href="#sign-up-tab">Sign up</a></li>
           </ul>
         </div>
-        <div class="card-content grey lighten-4">
+        <div class="card-content">
           <div id="sign-in-tab">Coming soon</div>
           <div id="sign-up-tab">
             <div class="row">
@@ -30,12 +31,12 @@
               </div>
             </div>
             <div class="row center">
-              <a class="waves-effect waves-light btn">Sign in</a>
+              <a class="waves-effect waves-light btn">Sign Up</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="col s1 m3"></div>
+    <div class="col s1 m2"></div>
   </div>
 </div>
