--- a/public/src/app/game.component.css
+++ b/public/src/app/game.component.css
@@ -24,12 +24,23 @@
 }
 
 #top-nav {
-  content: "";
+  position: fixed;
+  top: 0;
   /* Credit: https://pixabay.com/en/the-speaker-grill-texture-2184439/ */
   background: url("assets/top-nav-bg.png");
+  background-position: center;
+  background-repeat: no-repeat;
   height: 150px;
+  width: 850px;
   padding-top: 50px;
   z-index: -1;
+  box-shadow: 0 10px 35px 0 black !important;
+}
+
+@media only screen and (max-width: 849px) {
+  #top-nav {
+    width: 100%;
+  }
 }
 
 .btn, .btn-large {
