--- a/public/src/app/game.component.html
+++ b/public/src/app/game.component.html
@@ -1,9 +1,10 @@
 <div class="background"><div class="background-glyph"></div></div>
-<div class="container">
-  <div id="top-nav" class="row">
-    <div class="col s1 m5"></div>
-    <div class="col s10 m2">
-      <a class="waves-effect waves-light btn-large">PLAY!</a>
-    </div>
+<div id="top-nav" class="row">
+  <div class="col s1 m5"></div>
+  <div class="col s10 m2 center">
+    <a class="waves-effect waves-light btn-large">PLAY!</a>
   </div>
+</div>
+<div class="container">
+
 </div>
