--- a/public/src/app/login.component.html
+++ b/public/src/app/login.component.html
@@ -16,23 +16,25 @@
         <div class="card-content">
           <div id="sign-in-tab">Coming soon</div>
           <div id="sign-up-tab">
-            <div class="row">
-              <div class="input-field col s12">
-                <input id="username" type="text" class="validate">
-                <label for="username">Username</label>
+            <form #signUpForm="ngForm">
+              <div class="row">
+                <div class="input-field col s12">
+                  <input id="username" type="text" class="validate" name="username" required [(ngModel)]="username">
+                  <label for="username">Username</label>
+                </div>
+                <div class="input-field col s12">
+                  <input id="email" type="email" class="validate" name="email" required [(ngModel)]="email">
+                  <label for="email">Email</label>
+                </div>
+                <div class="input-field col s12">
+                  <input id="password" type="password" class="validate" name="password" required [(ngModel)]="password">
+                  <label for="password">Password</label>
+                </div>
               </div>
-              <div class="input-field col s12">
-                <input id="email" type="email" class="validate">
-                <label for="email">Email</label>
+              <div class="row center">
+                <button type="submit" class="waves-effect waves-light btn" [disabled]="!signUpForm.form.valid">Sign Up</button>
               </div>
-              <div class="input-field col s12">
-                <input id="password" type="password" class="validate">
-                <label for="password">Password</label>
-              </div>
-            </div>
-            <div class="row center">
-              <a class="waves-effect waves-light btn">Sign Up</a>
-            </div>
+            </form>
           </div>
         </div>
       </div>
