--- a/api/templates/users/verification.pug
+++ b/api/templates/users/verification.pug
@@ -25,7 +25,7 @@
       <tr bgcolor="#B59CA1">
         <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
         <td bgcolor="#B59CA1">
-          a(style="font-size: 10px; text-decoration: none; background-color: #FEE6F4; color: black; padding: 5px 12px 5px 12px; border-radius: 3px; font-weight: bold; font-family: Arial; border: 3px solid #F3C8E4;" href="#{verifyLink}" target="_blank") #{verifyLink}
+          a(style="font-size: 10px; text-decoration: none; background-color: #FEE6F4; color: black; padding: 5px 12px 5px 12px; border-radius: 3px; font-weight: bold; font-family: Arial; border: 3px solid #F3C8E4;" href=verifyLink target="_blank") #{verifyLink}
         </td>
       </tr>
     </table>
