Add sign up confirmation

--- a/public/src/app/login.component.html
+++ b/public/src/app/login.component.html
@@ -52,8 +52,9 @@
               </div>
             </form>
             <div class="center" *ngIf="isSignedUp">
+              <div><i class="material-icons large">mail_outline</i></div>
               <p>You have been signed up.</p>
-              <p>A verification email has been sent to {{email}}.</p>
+              <p>A verification email has been sent to {{email}}</p>
               <p>Please check your email to activate your account.</p>
             </div>
           </div>
