Socket not working

--- a/public/src/app/chat.component.html
+++ b/public/src/app/chat.component.html
@@ -9,7 +9,7 @@
   </div>
   <div id="msg-box">
     <div id="msg-input">
-      <input type="text" name="msg" value="123">
+      <input type="text" name="msg">
     </div>
     <button id="send-btn" class="btn waves-effect" type="submit" name="action">
       <i class="material-icons">send</i>
