--- a/public/src/app/chat.component.css
+++ b/public/src/app/chat.component.css
@@ -18,6 +18,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 #chat-container {
   width: 300px;
   height: 90vh;
+  margin-top: 5vh;
   background-color: rgb(47, 49, 54);
   box-shadow: 0 10px 35px 0 black;
 }
