--- a/api/views/users/verification.pug
+++ b/api/views/users/verification.pug
@@ -2,6 +2,13 @@
 <table style="width: 500px;" border="0" align="center" cellspacing="0" cellpadding="0">
   <tbody><tr>
     <td style="height: 65px; background-color: #25272A;">
+      <table width="600" border="0" align="center" cellpadding="0" cellspacing="0">
+        <tr bgcolor="#25272A">
+          <td>
+            <span style="font-size: 30px; color: #F05366; font-family: Arial; font-weight: bold;">Web Sweeper</span>
+          </td>
+        </tr>
+      </table>
     </td>
   </tr>
   <tr><td bgcolor="#25272A">
@@ -28,7 +35,6 @@
           <br><br><br><br>
         </td>
       </tr>
-      <tr bgcolor="#25272A"><td>&nbsp;</td></tr>
       <tr bgcolor="#25272A"><td>&nbsp;</td></tr>
     </table>
   </td></tr>
