--- a/public/src/app/game.component.css
+++ b/public/src/app/game.component.css
@@ -28,7 +28,7 @@
 }
 
 #top-nav {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   right: 0;
@@ -39,7 +39,6 @@
   height: 150px;
   width: 850px;
   padding-top: 50px;
-  z-index: 1;
   box-shadow: 0 10px 35px 0 black !important;
 }
 
@@ -64,4 +63,10 @@ input {
 input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focus, input[type="number"]:focus {
   border-bottom-color: rgb(238, 110, 115) !important;
   box-shadow: 0 1px 0 0 rgb(246, 178, 181) !important;
+}
+
+chat {
+  position: fixed;
+  right: 0;
+  top: 0;
 }
