--- a/public/src/app/chat.component.html
+++ b/public/src/app/chat.component.html
@@ -1,4 +1,9 @@
 <div id="chat-container">
+  <div id="close-btn">
+    <a class="btn-flat waves-effect">
+      <i class="material-icons">close</i>
+    </a>
+  </div>
   <div id="chat-stream">
     <div class="msg" *ngFor="let msg of this.messages">
       {{msg}}
