--- a/public/src/app/chat.component.css
+++ b/public/src/app/chat.component.css
@@ -27,7 +27,7 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 
 #chat-stream {
   width: 100%;
-  height: calc(100% - 58px);
+  height: calc(100% - 58px - 38px);
 }
 
 #msg-box {
@@ -52,4 +52,11 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 .msg {
   color: white;
   padding: 20px 10px 0 10px;
+}
+
+.btn-flat {
+  padding: 0 9px;
+  color: white;
+  background-color: rgb(47, 49, 54);
+  margin: 1px 1px;
 }
