--- a/public/src/app/game.component.html
+++ b/public/src/app/game.component.html
@@ -2,11 +2,25 @@
 <div id="top-nav" class="row">
   <div class="col s1 m5"></div>
   <div class="col s10 m2 center">
-    <a class="waves-effect waves-light btn-large">PLAY!</a>
+    <a class="waves-effect waves-light btn-large" (click)="showCreategame()" *ngIf="isLobby">PLAY!</a>
+    <a class="waves-effect waves-light btn-flat" (click)="backToLobby()" *ngIf="!isLobby"><i id="back-to-lobby-btn" class="material-icons">keyboard_arrow_up</i></a>
   </div>
 </div>
 <div class="container">
-  <div id="create-game-container">
+  <div id="lobby-container" *ngIf="isLobby">
+    <div class="lobby-entry">
+      <div class="row">
+        <div class="col s11">
+          Username
+        </div>
+        <div class="col s1">
+          <i class="material-icons">remove_red_eye</i>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="create-game-container" *ngIf="isCreateGame">
     <form #createGameForm="ngForm" (ngSubmit)="createGame()">
       <div class="row">
         <div class="input-field col s12">
@@ -23,10 +37,11 @@
         </div>
       </div>
       <div class="row center">
-        <button type="submit" class="waves-effect waves-light btn" [disabled]="!createGameForm.form.valid">Submit</button>
+        <button type="submit" class="waves-effect waves-light btn" [disabled]="!createGameForm.form.valid">Create game</button>
       </div>
     </form>
   </div>
-  <minesweeper #ms [row]="row" [col]="col" [mines]="mines" [gameId]="gameId"></minesweeper>
-  <chat #cht [gameId]="gameId"></chat>
+
+  <minesweeper #ms [row]="row" [col]="col" [mines]="mines" [gameId]="gameId" *ngIf="isInGame"></minesweeper>
+  <chat #cht [gameId]="gameId" *ngIf="isChatOpen"></chat>
 </div>
