--- a/public/src/app/minesweeper.component.html
+++ b/public/src/app/minesweeper.component.html
@@ -1,10 +1,12 @@
-<div *ngFor="let row of board" (contextmenu)="disableContextMenu($event)">
-  <a id="{{cell.x}}-{{cell.y}}"
-     class="btn-flat {{cell.status == 0 ? 'waves-effect' : ''}} {{cell.status == 1 ? 'revealed' : ''}}"
-     [ngClass]="getCellClasses()"
-     *ngFor="let cell of row"
-     (click)="click($event, 0)"
-     (contextmenu)="click($event, 1)">
-    <i class="material-icons {{cell.status == 2 ? 'flagged' : ''}}">{{cell.display}}</i>
-  </a>
+<div id="minesweeper-container">
+  <div *ngFor="let row of board" (contextmenu)="disableContextMenu($event)">
+    <a id="{{cell.x}}-{{cell.y}}"
+       class="btn-flat {{cell.status == 0 ? 'waves-effect' : ''}} {{cell.status == 1 ? 'revealed' : ''}}"
+       [ngClass]="getCellClasses()"
+       *ngFor="let cell of row"
+       (click)="click($event, 0)"
+       (contextmenu)="click($event, 1)">
+      <i class="material-icons {{cell.status == 2 ? 'flagged' : ''}}">{{cell.display}}</i>
+    </a>
+  </div>
 </div>
