--- a/public/src/app/chat.component.html
+++ b/public/src/app/chat.component.html
@@ -1,6 +1,6 @@
 <div id="chat-container">
   <div id="close-btn">
-    <a class="btn-flat waves-effect">
+    <a class="btn-flat waves-effect" (click)="this.closeChat.emit();">
       <i class="material-icons">close</i>
     </a>
   </div>
@@ -14,7 +14,7 @@
       <div id="msg-input">
         <input type="text" name="message" name="message" required [(ngModel)]="message">
       </div>
-      <button id="send-btn" class="btn waves-effect" type="submit" name="action">
+      <button id="send-btn" class="btn waves-effect" type="submit" name="action" [disabled]="!chatForm.form.valid">
         <i class="material-icons">send</i>
       </button>
     </form>
