--- a/public/src/app/game.component.html
+++ b/public/src/app/game.component.html
@@ -1,20 +1,30 @@
 <div class="background"><div class="background-glyph"></div></div>
 <div id="top-nav" class="row">
-  <div class="col s1 m5"></div>
-  <div class="col s10 m2 center">
+  <div class="col s2"></div>
+  <div class="col s8 center">
     <a class="waves-effect waves-light btn-large" (click)="showCreategame()" *ngIf="isLobby">PLAY!</a>
-    <a class="waves-effect waves-light btn-flat" (click)="backToLobby()" *ngIf="!isLobby"><i id="back-to-lobby-btn" class="material-icons">keyboard_arrow_up</i></a>
+    <a class="waves-effect waves-light btn-flat" (click)="backToLobby()" *ngIf="!isLobby"><i class="material-icons top-nav-btn larger">keyboard_arrow_up</i></a>
+  </div>
+  <div class="col s2">
+    <a class="waves-effect waves-light btn-flat" (click)="toggleChat()" *ngIf="!isLobby">
+      <i class="material-icons top-nav-btn">message</i><span class="badge">0</span>
+    </a>
   </div>
 </div>
+
 <div class="container">
   <div id="lobby-container" *ngIf="isLobby">
-    <div class="lobby-entry">
+    <div class="lobby-entry" *ngFor="let entry of rooms">
       <div class="row">
         <div class="col s11">
-          Username
+          {{entry.username}}
+          <br>
+          <div class="create-time">Last active: {{entry.updatedAt}}</div>
         </div>
         <div class="col s1">
-          <i class="material-icons">remove_red_eye</i>
+          <a class="waves-effect waves-light btn-flat spectate-btn">
+            <i class="material-icons">remove_red_eye</i>
+          </a>
         </div>
       </div>
     </div>
@@ -43,5 +53,5 @@
   </div>
 
   <minesweeper #ms [row]="row" [col]="col" [mines]="mines" [gameId]="gameId" *ngIf="isInGame"></minesweeper>
-  <chat #cht [gameId]="gameId" *ngIf="isChatOpen"></chat>
+  <chat #cht [gameId]="gameId" (closeChat)="closeChat()" [hidden]="!isChatOpen"></chat>
 </div>
