--- a/public/src/app/game.component.html
+++ b/public/src/app/game.component.html
@@ -2,12 +2,12 @@
 <div id="top-nav" class="row">
   <div class="col s2"></div>
   <div class="col s8 center">
-    <a class="waves-effect waves-light btn-large" (click)="showCreategame()" *ngIf="isLobby">PLAY!</a>
+    <a id="play-btn" class="waves-effect waves-light btn-large" (click)="showCreategame()" *ngIf="isLobby">PLAY!</a>
     <a class="waves-effect waves-light btn-flat" (click)="backToLobby()" *ngIf="!isLobby"><i class="material-icons top-nav-btn larger">keyboard_arrow_up</i></a>
   </div>
   <div class="col s2">
-    <a class="waves-effect waves-light btn-flat" (click)="toggleChat()" *ngIf="!isLobby">
-      <i class="material-icons top-nav-btn">message</i><span class="badge">0</span>
+    <a class="waves-effect waves-light btn-flat" (click)="toggleChat()" *ngIf="isInGame">
+      <i class="material-icons top-nav-btn">message</i><span class="counter">{{newMsgCounter}}</span>
     </a>
   </div>
 </div>
@@ -16,13 +16,13 @@
   <div id="lobby-container" *ngIf="isLobby">
     <div class="lobby-entry" *ngFor="let entry of rooms">
       <div class="row">
-        <div class="col s11">
+        <div class="col s10">
           {{entry.username}}
           <br>
           <div class="create-time">Last active: {{entry.updatedAt}}</div>
         </div>
-        <div class="col s1">
-          <a class="waves-effect waves-light btn-flat spectate-btn">
+        <div class="col s2">
+          <a id="{{entry.id}}" class="waves-effect waves-light btn-flat spectate-btn" (click)="spectateGame($event)">
             <i class="material-icons">remove_red_eye</i>
           </a>
         </div>
@@ -53,5 +53,5 @@
   </div>
 
   <minesweeper #ms [row]="row" [col]="col" [mines]="mines" [gameId]="gameId" *ngIf="isInGame"></minesweeper>
-  <chat #cht [gameId]="gameId" (closeChat)="closeChat()" [hidden]="!isChatOpen"></chat>
+  <chat #cht [hidden]="!isChatOpen" [gameId]="gameId" [isChatOpen]="isChatOpen" [newMsgCounter]="newMsgCounter" (closeChat)="closeChat()" (updateMsgCounter)="updateMsgCounter($event)"></chat>
 </div>
