--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,1 +1,7 @@
-<router-outlet></router-outlet>
+<minesweeper-board
+  [rows]="rows"
+  [columns]="columns"
+  [mines]="mines"
+  [active]="active"
+  (revealed)="test($event)"
+  (flagged)="test($event)"></minesweeper-board>
