--- a/public/src/styles.css
+++ b/public/src/styles.css
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+body, html {
+  height: 100%;
+  width: 100%;
+}
+
+
+#pageloader-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+#pageloader-wrapper .preloader-wrapper {
+  margin: auto;
+}
