--- a/public/src/app/app.component.html
+++ b/public/src/app/app.component.html
@@ -1,7 +1,2 @@
-<minesweeper-board
-  [rows]="rows"
-  [columns]="columns"
-  [mines]="mines"
-  [active]="active"
-  (revealed)="test($event)"
-  (flagged)="test($event)"></minesweeper-board>
+<div class="background"><div class="background-glyph"></div></div>
+<router-outlet></router-outlet>
