Added peerjs and remove unnecessary socket io files

--- a/public/src/app/games/game.component.html
+++ b/public/src/app/games/game.component.html
@@ -8,13 +8,11 @@
       <span class="counter">{{missedMessages}}</span>
     </a>
   </div>
-  <!--
   <minesweeper
     *ngIf="type===GAME_TYPES.MINESWEEPER"
     [id]="id">
   </minesweeper>
-  -->
-  <shooter></shooter>
+  <!--<shooter></shooter>-->
 
   <chat
     #cht
