--- a/public/src/app/games/game.component.css
+++ b/public/src/app/games/game.component.css
@@ -1,5 +1,29 @@
+#top-nav {
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  width: 850px;
+  padding-top: 7px;
+  background-color: rgb(47, 49, 54);
+  color: white;
+  box-shadow: 0 10px 35px 0 black !important;
+}
+
+#top-nav a {
+  color: white;
+}
+
 chat {
   position: fixed;
   right: 0;
   top: 0;
+}
+
+shooter {
+  position: absolute;
+  top: 100px;
 }
