--- a/public/src/app/games/game.component.html
+++ b/public/src/app/games/game.component.html
@@ -1,13 +1,17 @@
-
 <div class="container">
-  <div class="col s2">
-    <a
-      class="waves-effect waves-light btn-flat"
-      (click)="toggleChat()">
-      <i class="material-icons top-nav-btn">message</i>
-      <span class="counter">{{missedMessages}}</span>
-    </a>
+  <div id="top-nav" class="row">
+    <div class="col s2"></div>
+    <div class="col s8"></div>
+    <div class="col s2">
+      <a
+        class="waves-effect waves-light btn-flat"
+        (click)="toggleChat()">
+        <i class="material-icons top-nav-btn">message</i>
+        <span class="counter">{{missedMessages}}</span>
+      </a>
+    </div>
   </div>
+
   <!--<minesweeper
     *ngIf="type===GAME_TYPES.MINESWEEPER"
     [id]="id">
