added streaming canvas

--- a/public/src/app/games/shooter/shooter.component.html
+++ b/public/src/app/games/shooter/shooter.component.html
@@ -1,11 +1,17 @@
 <div id="wrapper">
+  <video
+    #stream
+    *ngIf="!isHost"
+    autoplay>
+  </video>
   <shooter-game
+    #shooter
+    *ngIf="isHost"
     [height]="height"
     [width]="width"
     [projectileIconSrc]="'assets/shooter/shot.png'"
     [enemyIconSrc]="'assets/shooter/enemy.png'"
     [playerIconSrc]="'assets/shooter/player.png'"
-    [isSpectating]="spectating"
     >
   </shooter-game>
 </div>
