Add back button to game

--- a/public/src/app/games/game.component.css
+++ b/public/src/app/games/game.component.css
@@ -23,7 +23,19 @@ chat {
   top: 0;
 }
 
-shooter {
+minesweeper, shooter {
   position: absolute;
   top: 100px;
+  left: 0;
+  right: 0;
+}
+
+.btn-left {
+  float: left;
+  margin-left: 10px;
+}
+
+.btn-right {
+  float: right;
+  margin-right: 10px;
 }
