--- a/public/src/app/games/game.component.html
+++ b/public/src/app/games/game.component.html
@@ -1,26 +1,27 @@
 <div class="container">
   <div id="top-nav" class="row">
-    <div class="col s2"></div>
-    <div class="col s8"></div>
-    <div class="col s2">
-      <a
-        class="waves-effect waves-light btn-flat"
-        (click)="toggleChat()">
-        <i class="material-icons top-nav-btn">message</i>
-        <span class="counter">{{missedMessages}}</span>
-      </a>
-    </div>
+    <a
+      class="waves-effect waves-light btn-flat btn-left"
+      (click)="backToLobby()">
+      <i class="material-icons top-nav-btn">arrow_back</i>
+    </a>
+    <a
+      class="waves-effect waves-light btn-flat btn-right"
+      (click)="toggleChat()">
+      <i class="material-icons top-nav-btn">message</i>
+      <span class="counter">{{missedMessages}}</span>
+    </a>
   </div>
 
-  <!--<minesweeper
+  <minesweeper
     *ngIf="type===GAME_TYPES.MINESWEEPER"
     [id]="id">
-  </minesweeper>-->
-  <shooter
+  </minesweeper>
+  <!-- <shooter
     [height]="shooterConfig.height"
     [width]="shooterConfig.width"
     [difficulty]="shooterConfig.difficulty"
-    ></shooter>
+    ></shooter> -->
 
   <chat
     #cht
