--- a/public/src/app/games/lobby.component.css
+++ b/public/src/app/games/lobby.component.css
@@ -108,3 +108,13 @@ chat {
   margin-top: 15px;
   background-color: rgb(47, 49, 54);
 }
+
+.btn-left {
+  float: left;
+  margin-left: 10px;
+}
+
+.btn-right {
+  float: right;
+  margin-right: 10px;
+}
