Added shooter game with config/webrtc working

--- a/public/src/app/games/game.component.html
+++ b/public/src/app/games/game.component.html
@@ -17,11 +17,11 @@
     *ngIf="type===GAME_TYPES.MINESWEEPER"
     [id]="id">
   </minesweeper>
-  <!-- <shooter
+  <shooter
+    *ngIf="type===GAME_TYPES.SHOOTER"
     [height]="shooterConfig.height"
     [width]="shooterConfig.width"
-    [difficulty]="shooterConfig.difficulty"
-    ></shooter> -->
+    ></shooter>
 
   <chat
     #cht
