--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -96,7 +96,7 @@
                 name="difficulty"
                 [(ngModel)]="shooter.difficulty"
                 required>
-              <label for="row">Difficulty</label>
+              <label for="difficulty">Difficulty</label>
             </div>
              Difficulty: (0 = CASUAL LUL, 10 = Normal)
           </div>
