--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -39,8 +39,8 @@
   <div class="card" [hidden]="!creatingGame">
     <div class="card-tabs">
       <ul class="tabs tabs-fixed-width">
-        <li class="tab"><a class="active">Minesweeper</a></li>
-        <li class="tab"><a>Shooter</a></li>
+        <li class="tab"><a class="active" href="#minesweeper-tab">Minesweeper</a></li>
+        <li class="tab"><a href="#shooter-tab">Shooter</a></li>
       </ul>
     </div>
     <div class="card-content">
