--- a/public/src/app/games/shooter/shooter.component.html
+++ b/public/src/app/games/shooter/shooter.component.html
@@ -12,6 +12,7 @@
     [projectileIconSrc]="'assets/shooter/shot.png'"
     [enemyIconSrc]="'assets/shooter/enemy.png'"
     [playerIconSrc]="'assets/shooter/player.png'"
+    [config]="config"
     >
   </shooter-game>
 </div>
