--- a/public/src/app/games/game.component.html
+++ b/public/src/app/games/game.component.html
@@ -2,7 +2,7 @@
   <div id="top-nav" class="row">
     <a
       class="waves-effect waves-light btn-flat btn-left"
-      (click)="backToLobby()">
+      [routerLink]="['/lobby']">
       <i class="material-icons top-nav-btn">arrow_back</i>
     </a>
     <a
