--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col s2">
           <a
-            href="/games/{{entry.id}}"
+            [routerLink]="['/games', entry.id]"
             class="waves-effect waves-light btn-flat spectate-btn"
             (click)="spectateGame($event)">
             <i class="material-icons">remove_red_eye</i>
