Add user profile floating layer, not working yet

--- a/public/src/app/app.component.css
+++ b/public/src/app/app.component.css
@@ -19,3 +19,18 @@
   /* Credit: https://pixabay.com/en/retro-perspective-grid-tron-synth-1548260/ */
   background-image: url("/assets/background.png");
 }
+
+user-card {
+  position: absolute;
+  background-color: rgb(47, 49, 54);
+  top: 140px;
+  right: calc(50% - 400px);
+  z-index: 10;
+  box-shadow: 0 10px 35px 0 black;
+}
+
+@media only screen and (max-width: 849px) {
+  user-card {
+    right: 0;
+  }
+}
