Add avatar in lobby

--- a/public/src/app/users/user-card.component.html
+++ b/public/src/app/users/user-card.component.html
@@ -1,5 +1,5 @@
 <div id="close-btn">
-  <a class="btn-flat waves-effect">
+  <a class="btn-flat waves-effect" (click)="toggleProfile()">
     <i class="material-icons">close</i>
   </a>
 </div>
