--- a/public/src/app/games/lobby.component.css
+++ b/public/src/app/games/lobby.component.css
@@ -142,3 +142,24 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
   border-bottom-color: rgb(238, 110, 115) !important;
   box-shadow: 0 1px 0 0 rgb(246, 178, 181) !important;
 }
+
+#avatar {
+  /* Credit: https://stackoverflow.com/a/26681130 */
+  background-image: url('http://img2.wikia.nocookie.net/__cb20140120061808/creepypasta/images/e/e2/Anime-Girl-With-Silver-Hair-And-Purple-Eyes-HD-Wallpaper.jpg');
+  width: 64px;
+  height: 64px;
+  background-size: cover;
+  background-position: top center;
+  border-radius: 50%;
+  float: right;
+  margin-right: 20px;
+}
+
+user-card {
+  position: absolute;
+  background-color: rgb(47, 49, 54);
+  top: 140px;
+  right: calc(50% - 400px);
+  z-index: 10;
+  box-shadow: 0 10px 35px 0 black;
+}
