--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -1,3 +1,5 @@
+<user-card [hidden]="!profileOpen" (onClose)="toggleProfile()"></user-card>
+
 <div id="top-nav" class="row center">
   <a
     id="play-btn"
@@ -12,6 +14,7 @@
     (click)="exitCreateGame()">
     <i class="material-icons top-nav-btn larger">arrow_back</i>
   </a>
+  <div id="avatar" (click)="toggleProfile()"></div>
 </div>
 
 <div class="container">
