--- a/public/src/app/games/lobby.component.html
+++ b/public/src/app/games/lobby.component.html
@@ -12,9 +12,9 @@
     class="waves-effect waves-light btn-flat btn-left"
     *ngIf="creatingGame"
     (click)="exitCreateGame()">
-    <i class="material-icons top-nav-btn larger">arrow_back</i>
+    <i id="back-btn" class="material-icons top-nav-btn">arrow_back</i>
   </a>
-  <div id="avatar" (click)="toggleProfile()"></div>
+  <img id="avatar" src="http://img2.wikia.nocookie.net/__cb20140120061808/creepypasta/images/e/e2/Anime-Girl-With-Silver-Hair-And-Purple-Eyes-HD-Wallpaper.jpg" (click)="toggleProfile()">
 </div>
 
 <div class="container">
