--- a/public/src/app/games/chat/chat.component.css
+++ b/public/src/app/games/chat/chat.component.css
@@ -26,9 +26,10 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
 }
 
 #chat-stream {
-  width: 100%;
+  width: 90%;
+  margin: auto;
   height: calc(100% - 58px - 38px);
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #msg-box {
@@ -48,11 +49,6 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
   float: right;
   margin-top: 10px;
   margin-right: 10px;
-}
-
-.msg {
-  color: white;
-  padding: 20px 10px 0 10px;
 }
 
 .btn-flat {
