--- a/public/src/app/games/chat/chat.component.css
+++ b/public/src/app/games/chat/chat.component.css
@@ -23,6 +23,8 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
   margin-top: 5vh;
   background-color: rgb(47, 49, 54);
   box-shadow: 0 10px 35px 0 black;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #9e9e9e;
 }
 
 #chat-stream {
@@ -42,6 +44,12 @@ input[type="text"]:focus, input[type="email"]:focus, input[type="password"]:focu
   display: inline-block;
   width: 220px;
   margin-left: 10px;
+  user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 
 #send-btn {
