--- a/public/src/app/games/chat/message.component.css
+++ b/public/src/app/games/chat/message.component.css
@@ -1,6 +1,12 @@
 .message-container {
   display: flex;
   margin-bottom: 8px;
+  user-drag: none; 
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
 }
 .avatar {
   height: 36px;
